--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@wailsapp/runtime": "^1.0.10",
     "core-js": "^3.6.4",
     "regenerator-runtime": "^0.13.3",
     "vue": "^2.6.11",
-    "vuetify": "^2.3.15",
-    "@wailsapp/runtime": "^1.0.10"
+    "vue-panzoom": "^1.1.3",
+    "vuetify": "^2.3.15"
   },
   "devDependencies": {
     "@mdi/font": "^4.9.95",
@@ -45,9 +46,18 @@
       "autoprefixer": {}
     }
   },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all",
+      "ie 11"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version",
+      "ie 11"
+    ]
+  }
 }
